# Python_Kacper

./: .gitignore  PDF_Tool.py  README.md  main.py  main_old.py  pdf_tool_gui.py  pyproject.toml  questions.md
